fix(preferences): Improve legibility of database error message

--- a/src/content/style/preferences.css
+++ b/src/content/style/preferences.css
@@ -7,7 +7,8 @@
 }
 
 #notero-notionDatabaseError {
-  color: darkred;
+  color: var(--accent-red);
+  white-space: normal;
 }
 
 #notero-syncConfigsTable-container {
